--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,3 @@
-lua.c
-lua.dll
-
-lapi.c
-lcode.c
-lctype.c
-ldebug.c
-ldo.c
-ldump.c
-lfunc.c
-lgc.c
-llex.c
-lmem.c
-lobject.c
-lopcodes.c
-lparser.c
-lstate.c
-lstring.c
-ltable.c
-ltm.c
-lundump.c
-lvm.c
-lzio.c
-lauxlib.c
-lbaselib.c
-lcorolib.c
-ldblib.c
-liolib.c
-lmathlib.c
-loadlib.c
-loslib.c
-lstrlib.c
-ltablib.c
-lutf8lib.c
-linit.c
-
-lua.h
-luaconf.h
-lualib.h
-lauxlib.h
-lua.hpp
-lapi.h
-lcode.h
-lctype.h
-ldebug.h
-ldo.h
-lfunc.h
-lgc.h
-ljumptab.h
-llex.h
-llimits.h
-lmem.h
-lobject.h
-lopcodes.h
-lopnames.h
-lparser.h
-lprefix.h
-lstate.h
-lstring.h
-ltable.h
-ltm.h
-lundump.h
-lvm.h
-lzio.h
-
-lib
-include
 .vscode
 
 test.lua
@@ -78,3 +11,5 @@ pong_hit.wav
 base.vs
 
 scanlines.fs
+
+comic.ttf
